// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FuelTax Landing Page Fuel List is rendering 1`] = `
<ForwardRef(Box)
  display="flex"
  ml={8}
  mt={10}
>
  <ForwardRef(Grid)
    className="main-area"
    container={true}
    pl={6.25}
    pr={6.25}
  >
    <ForwardRef(Grid)
      container={true}
      display="flex"
      flexGrow={1}
    >
      <ForwardRef(Grid)
        display="flex"
        item={true}
        lg={9}
        md={8}
      >
        <ForwardRef(Grid)
          item={true}
          pr={2.5}
        >
          <Button
            aria-label="dafault"
            onClick={[Function]}
            startIcon={<FilterIcon />}
            types="filter"
          >
            buttons.filter
          </Button>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          pr={2.5}
        >
          <ForwardRef(FormControl)>
            <SortbyMenu
              onSelect={[Function]}
              options={
                Array [
                  "taxes.fuelTax.sortBy.cityname_atoz",
                  "taxes.fuelTax.sortBy.cityname_ztoa",
                ]
              }
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <SearchInput
            delay={500}
            id="SearchInput"
            name="searchTerm"
            onChange={[Function]}
            placeholder="taxes.fuelTax.search"
            type="text"
            value=""
            width="100%"
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        display="flex"
        item={true}
        justifyContent="flex-end"
        lg={3}
        md={4}
      >
        <ForwardRef(Grid)
          item={true}
          pr={2.5}
        >
          <Button
            aria-label="primary"
            onClick={[Function]}
            startIcon={<Memo />}
            types="primary"
          >
            buttons.add tax
          </Button>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(FormControl)>
            <ActionsMenu
              onSelect={[Function]}
              options={
                Array [
                  Object {
                    "action": "export",
                    "icon": [Function],
                    "label": "menus.actions.export data",
                  },
                ]
              }
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      container={true}
      display="flex"
      flexGrow={1}
      pt={2.5}
    >
      <GridComponent
        InnerTableComponent={
          <InnerTable
            enableRowAction={true}
            headCells={
              Array [
                Object {
                  "align": "left",
                  "field": "productCd",
                  "fieldOptions": Array [
                    Object {
                      "displayValue": "Regular",
                      "icon": [Function],
                      "value": "Regular",
                    },
                    Object {
                      "displayValue": "Premium",
                      "icon": [Function],
                      "value": "Premium",
                    },
                    Object {
                      "displayValue": "Diesel",
                      "icon": [Function],
                      "value": "Diesel",
                    },
                    Object {
                      "displayValue": "V-Power",
                      "icon": [Function],
                      "value": "V-Power",
                    },
                    Object {
                      "displayValue": "Petrol",
                      "icon": [Function],
                      "value": "Petrol",
                    },
                  ],
                  "label": "PRODUCT",
                  "showIconLast": false,
                  "type": "status",
                },
                Object {
                  "align": "left",
                  "field": "fedFuelTax",
                  "label": "FEDERAL TAX ($)",
                  "type": "text",
                },
                Object {
                  "align": "left",
                  "field": "revenueFuelRate",
                  "label": "REVENUE RATE (%)",
                  "type": "text",
                },
                Object {
                  "field": "salesFuelRate",
                  "label": "SALES FUEL RATE (%)",
                  "type": "text",
                },
                Object {
                  "field": "stateFuelTax",
                  "label": "STATE TAX ($)",
                  "type": "text",
                },
                Object {
                  "field": "cityFuelTax",
                  "label": "CITY TAX ($)",
                  "type": "text",
                },
                Object {
                  "field": "countyFuelTax",
                  "label": "COUNTY TAX ($)",
                  "type": "text",
                },
                Object {
                  "field": "ppdSalesTax",
                  "label": "PPD SALES TAX (PREPAID) ($)",
                  "type": "text",
                },
                Object {
                  "field": "miscInspFuelTax",
                  "label": "MISP INSP FUEL TAX ($)",
                  "type": "text",
                },
                Object {
                  "field": "miscLocalFuelTax",
                  "label": "LOCAL TAX ($)",
                  "type": "text",
                },
                Object {
                  "field": "miscLoadFuelTax",
                  "label": "LOAD FUEL TAX ($)",
                  "type": "text",
                },
                Object {
                  "field": "startDate",
                  "label": "EFFECTIVE DATE",
                  "type": "text",
                },
                Object {
                  "field": "endDate",
                  "label": "END DATE",
                  "type": "text",
                },
              ]
            }
            id=""
            primaryKey="productTaxId"
            rowActionOptions={
              Array [
                Object {
                  "label": "",
                },
                Object {
                  "action": "edit",
                  "label": "menus.data-grid-actions.edit",
                },
                Object {
                  "label": "menus.data-grid-actions.raiseRequset",
                },
                Object {
                  "label": "menus.data-grid-actions.feeDetails",
                },
                Object {
                  "label": "menus.data-grid-actions.contact details",
                },
                Object {
                  "label": "menus.data-grid-actions.other details",
                },
              ]
            }
          />
        }
        enableRowAction={false}
        enableRowSelection={false}
        getId={[Function]}
        header={
          Array [
            Object {
              "align": "left",
              "field": "cityName",
              "label": "CITY",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "stateName",
              "label": "STATE",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "productsCount",
              "icon": [Function],
              "label": "PRODUCT",
              "type": "button",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
          ]
        }
        isLoading={false}
        noDataMsg="Add Fuel Tax by clicking on the \\"Add Tax\\" button."
        onResetTableCollaps={[Function]}
        primaryKey="taxJurisdictionId"
        resetCollaps={false}
        rowActionOptions={Array []}
        rows={Array []}
        searchTerm=""
      />
      <RightInfoPanel
        fields={
          Array [
            Object {
              "fieldType": "select",
              "initialValue": Array [],
              "label": "taxes.fuelTax.filter.state",
              "name": "state",
              "optionAPIResponseKey": "states",
              "optionUrlKey": "fuelTaxFilter",
            },
            Object {
              "fieldType": "select",
              "initialValue": Array [],
              "label": "taxes.fuelTax.filter.city",
              "name": "city",
              "optionAPIResponseKey": "cities",
              "optionUrlKey": "fuelTaxFilter",
            },
          ]
        }
        headingText="taxes.filterHeader"
        onClose={[Function]}
        open={false}
        panelType="dynamic-filter"
        provideFilterParams={[Function]}
        storeKey="fuelTaxFilter"
      />
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</ForwardRef(Box)>
`;

exports[`Given Bruger Menu on FuelTax Landing Page Render Bruger Menu 1`] = `
<div>
  <WithStyles(ForwardRef(Button))
    aria-haspopup="true"
    aria-label="actions menu list"
    className="btn-listmemu "
    onClick={[Function]}
    size="small"
    startIcon={
      <WithStyles(ForwardRef(SvgIcon))
        component={[Function]}
        viewBox="0 0 20 20"
      />
    }
    variant="contained"
  />
  <ForwardRef(Popper)
    anchorEl={null}
    className="actions-popper"
    disablePortal={true}
    open={false}
    placement="bottom-end"
    transition={true}
  >
    <Component />
  </ForwardRef(Popper)>
</div>
`;

exports[`Given Search FuelTax Landing Page Show Fuel List as per searched value 1`] = `
<ForwardRef(Box)
  display="flex"
  ml={8}
  mt={10}
>
  <ForwardRef(Grid)
    className="main-area"
    container={true}
    pl={6.25}
    pr={6.25}
  >
    <ForwardRef(Grid)
      container={true}
      display="flex"
      flexGrow={1}
    >
      <ForwardRef(Grid)
        display="flex"
        item={true}
        lg={9}
        md={8}
      >
        <ForwardRef(Grid)
          item={true}
          pr={2.5}
        >
          <Button
            aria-label="dafault"
            onClick={[Function]}
            startIcon={<FilterIcon />}
            types="filter"
          >
            buttons.filter
          </Button>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
          pr={2.5}
        >
          <ForwardRef(FormControl)>
            <SortbyMenu
              onSelect={[Function]}
              options={
                Array [
                  "taxes.fuelTax.sortBy.cityname_atoz",
                  "taxes.fuelTax.sortBy.cityname_ztoa",
                ]
              }
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <SearchInput
            delay={500}
            id="SearchInput"
            name="searchTerm"
            onChange={[Function]}
            placeholder="taxes.fuelTax.search"
            type="text"
            value=""
            width="100%"
          />
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        display="flex"
        item={true}
        justifyContent="flex-end"
        lg={3}
        md={4}
      >
        <ForwardRef(Grid)
          item={true}
          pr={2.5}
        >
          <Button
            aria-label="primary"
            onClick={[Function]}
            startIcon={<Memo />}
            types="primary"
          >
            buttons.add tax
          </Button>
        </ForwardRef(Grid)>
        <ForwardRef(Grid)
          item={true}
        >
          <ForwardRef(FormControl)>
            <ActionsMenu
              onSelect={[Function]}
              options={
                Array [
                  Object {
                    "action": "export",
                    "icon": [Function],
                    "label": "menus.actions.export data",
                  },
                ]
              }
            />
          </ForwardRef(FormControl)>
        </ForwardRef(Grid)>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
    <ForwardRef(Grid)
      container={true}
      display="flex"
      flexGrow={1}
      pt={2.5}
    >
      <GridComponent
        InnerTableComponent={
          <InnerTable
            enableRowAction={true}
            headCells={
              Array [
                Object {
                  "align": "left",
                  "field": "productCd",
                  "fieldOptions": Array [
                    Object {
                      "displayValue": "Regular",
                      "icon": [Function],
                      "value": "Regular",
                    },
                    Object {
                      "displayValue": "Premium",
                      "icon": [Function],
                      "value": "Premium",
                    },
                    Object {
                      "displayValue": "Diesel",
                      "icon": [Function],
                      "value": "Diesel",
                    },
                    Object {
                      "displayValue": "V-Power",
                      "icon": [Function],
                      "value": "V-Power",
                    },
                    Object {
                      "displayValue": "Petrol",
                      "icon": [Function],
                      "value": "Petrol",
                    },
                  ],
                  "label": "PRODUCT",
                  "showIconLast": false,
                  "type": "status",
                },
                Object {
                  "align": "left",
                  "field": "fedFuelTax",
                  "label": "FEDERAL TAX ($)",
                  "type": "text",
                },
                Object {
                  "align": "left",
                  "field": "revenueFuelRate",
                  "label": "REVENUE RATE (%)",
                  "type": "text",
                },
                Object {
                  "field": "salesFuelRate",
                  "label": "SALES FUEL RATE (%)",
                  "type": "text",
                },
                Object {
                  "field": "stateFuelTax",
                  "label": "STATE TAX ($)",
                  "type": "text",
                },
                Object {
                  "field": "cityFuelTax",
                  "label": "CITY TAX ($)",
                  "type": "text",
                },
                Object {
                  "field": "countyFuelTax",
                  "label": "COUNTY TAX ($)",
                  "type": "text",
                },
                Object {
                  "field": "ppdSalesTax",
                  "label": "PPD SALES TAX (PREPAID) ($)",
                  "type": "text",
                },
                Object {
                  "field": "miscInspFuelTax",
                  "label": "MISP INSP FUEL TAX ($)",
                  "type": "text",
                },
                Object {
                  "field": "miscLocalFuelTax",
                  "label": "LOCAL TAX ($)",
                  "type": "text",
                },
                Object {
                  "field": "miscLoadFuelTax",
                  "label": "LOAD FUEL TAX ($)",
                  "type": "text",
                },
                Object {
                  "field": "startDate",
                  "label": "EFFECTIVE DATE",
                  "type": "text",
                },
                Object {
                  "field": "endDate",
                  "label": "END DATE",
                  "type": "text",
                },
              ]
            }
            id=""
            primaryKey="productTaxId"
            rowActionOptions={
              Array [
                Object {
                  "label": "",
                },
                Object {
                  "action": "edit",
                  "label": "menus.data-grid-actions.edit",
                },
                Object {
                  "label": "menus.data-grid-actions.raiseRequset",
                },
                Object {
                  "label": "menus.data-grid-actions.feeDetails",
                },
                Object {
                  "label": "menus.data-grid-actions.contact details",
                },
                Object {
                  "label": "menus.data-grid-actions.other details",
                },
              ]
            }
          />
        }
        enableRowAction={false}
        enableRowSelection={false}
        getId={[Function]}
        header={
          Array [
            Object {
              "align": "left",
              "field": "cityName",
              "label": "CITY",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "stateName",
              "label": "STATE",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "productsCount",
              "icon": [Function],
              "label": "PRODUCT",
              "type": "button",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
            Object {
              "align": "left",
              "field": "",
              "label": "",
              "type": "text",
            },
          ]
        }
        isLoading={false}
        noDataMsg="Add Fuel Tax by clicking on the \\"Add Tax\\" button."
        onResetTableCollaps={[Function]}
        primaryKey="taxJurisdictionId"
        resetCollaps={false}
        rowActionOptions={Array []}
        rows={Array []}
        searchTerm=""
      />
      <RightInfoPanel
        fields={
          Array [
            Object {
              "fieldType": "select",
              "initialValue": Array [],
              "label": "taxes.fuelTax.filter.state",
              "name": "state",
              "optionAPIResponseKey": "states",
              "optionUrlKey": "fuelTaxFilter",
            },
            Object {
              "fieldType": "select",
              "initialValue": Array [],
              "label": "taxes.fuelTax.filter.city",
              "name": "city",
              "optionAPIResponseKey": "cities",
              "optionUrlKey": "fuelTaxFilter",
            },
          ]
        }
        headingText="taxes.filterHeader"
        onClose={[Function]}
        open={false}
        panelType="dynamic-filter"
        provideFilterParams={[Function]}
        storeKey="fuelTaxFilter"
      />
    </ForwardRef(Grid)>
  </ForwardRef(Grid)>
</ForwardRef(Box)>
`;

exports[`Given Sortby Menu on FuelTax Landing Page- Render Sortby Menu 1`] = `
<div>
  <WithStyles(ForwardRef(Button))
    aria-haspopup="true"
    aria-label="sortby menu list"
    className="btn-sortby "
    onClick={[Function]}
    startIcon={<Memo />}
  >
    buttons.sort by
  </WithStyles(ForwardRef(Button))>
  <ForwardRef(Popper)
    anchorEl={null}
    className="sortby-popper"
    disablePortal={true}
    open={false}
    placement="bottom-start"
    transition={true}
  >
    <Component />
  </ForwardRef(Popper)>
</div>
`;
